# llmd

./: Cargo.toml  README.md  RELEASE.md  check-report.md
.llmd/: architecture.md  catme.md  cli.md  context-mappings.json  conventions.md  deployment.md
.llmd/issues/: 001-fix-parser-edge-case.md
docs/: LLMD_REPORT.md
issues/: 0001-initial-cli-scaffold.md  0002-discovery-module.md  0003-init-command.md  0004-read-command.md  0005-compose-command.md  0006-search-command.md  0007-serve-build-commands.md  0008-readme.md  README.md
scripts/: check.sh  release.sh
src/: discovery.rs  llmd_dir.rs  main.rs  markdown.rs
src/commands/: bootstrap.rs  build.rs  compose.rs  index.rs  init.rs  mod.rs  read.rs  search.rs  serve.rs
src/commands/issue/: init.rs  list.rs  mentions.rs  mod.rs  new.rs  ready.rs  show.rs  tree.rs  update.rs
src/issues/: file_ops.rs  frontmatter.rs  graph.rs  mod.rs  models.rs
task/: issue_tracker.md  llmd_v1.0.0_cli.chat.md  llmd_v1.0.0_cli.plan.md  prompt.md  task.md
